cluster/apps/development/portainer/portainer-ingressroute.yaml
# portainer-local-ingressroute
# portainer-http-ingressroute
# portainer-https-ingressroute

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-local-ingressroute
  namespace: portainer
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`portainer.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: portainer-portainer
          port: 9000

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-http-ingressroute
  namespace: portainer
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`portainer.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: https-redirect-scheme-middleware
          namespace: traefik
      services:
        - name: portainer-portainer
          port: 9000

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-https-ingressroute
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: authelia-middleware
          namespace: authentication
        - name: secure-headers-middleware
          namespace: traefik
      services:
        - name: portainer-portainer
          namespace: portainer
          port: 9000
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
